<resources>
    <string name="app_name">FLG Continuous Tester</string>
    <string name="action_settings">Settings</string>
    <string name="pattern_time_sec">Pattern Time</string>
    <string name="insert_row">Insert</string>
    <string name="ch_1">Ch 1</string>
    <string name="ch_2">Ch 2</string>
    <string name="ch_3">Ch 3</string>
    <string name="ch_4">Ch 4</string>
    <string name="ch_5">Ch 5</string>
    <string name="ch_6">Ch 6</string>
    <string name="ch_7">Ch 7</string>
    <string name="ch_8">Ch 8</string>
    <string name="delete_row">Delete</string>
    <string name="flaming_lotus_girls_poofer_tester">FLG Continuous Tester</string>
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="repeat">Repeat</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
</resources>
